--- a/src/componentes/Button/Button.module.css
+++ b/src/componentes/Button/Button.module.css
@@ -1,13 +1,23 @@
 .button {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  width: 50%;
+  text-align: center;
   align-items: center;
-  width: 180px;
-  height: 54px;
-  border: 1px solid white;
-  border-radius: 10px;
-  text-decoration: none;
-  color: white;
-  box-sizing: border-box;
+  justify-content: center;
+  gap: 15px;
+  background: none;
+  border: none;
   cursor: pointer;
+}
+
+.button img {
+  width: 25px;
+  height: 28px;
+}
+
+.button p {
+  color: white;
+  font-size: 16px;
+  font-weight: bolder;
 }
