--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+:root {
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
