--- a/src/componentes/Footer/Footer.module.css
+++ b/src/componentes/Footer/Footer.module.css
@@ -1,14 +1,10 @@
-.rodape {
+.footer {
   background-color: #030910;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 250px;
   height: 125px;
-}
-
-.rodape p {
-  color: white;
 }
 
 .logo {
