--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
   font-family: "Roboto", serif;
   font-weight: 400;
   font-style: normal;
+  background-color: #191919;
+  color: white;
 }
 
 body {
