--- a/src/componentes/Form/Form.module.css
+++ b/src/componentes/Form/Form.module.css
@@ -1,6 +1,24 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+}
+
 .form {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  gap: 0 20px;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.fields {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  width: 100%;
+}
+
+.formButton {
+  display: flex;
+  gap: 20px;
 }
