--- a/src/componentes/Link/Link.module.css
+++ b/src/componentes/Link/Link.module.css
@@ -4,10 +4,18 @@
   align-items: center;
   width: 180px;
   height: 54px;
-  border: 1px solid white;
+  border: 2px solid white;
   border-radius: 10px;
   text-decoration: none;
   color: white;
   box-sizing: border-box;
   cursor: pointer;
+}
+
+.buttonPath {
+  border: 2px solid #2271D1;
+}
+
+.button:hover {
+  color: #2271D1;
 }
